# door-cam

./: .gitignore  pyproject.toml
door_cam/: camera_local.py  camera_remote.py  fps.py  main.py
