[tool.poetry]
name = "door-cam"
version = "0.1.0"
description = "Door camera"
authors = ["Michael Ludvig <mludvig@logix.net.nz>"]
license = "MIT"

[tool.poetry.scripts]
door-cam = "door_cam.main:main"

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^1.9.6"
toml = "^0.10.0"
opencv-python = "^4.1.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
